--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
   <div id="info">
     <p>Double-click to edit a todo</p>
   </div>
-  <script type="text/template" id="item-template"></script>
-  <script type="text/template" id="stats-template"></script>
+  <script type="text/x-handlebars-template" id="item-template"></script>
+  <script type="text/x-handlebars-template" id="stats-template"></script>
   <script src="js/lib/jquery.min.js"></script>
   <script src="js/lib/underscore-min.js"></script>
   <script src="js/lib/backbone-min.js"></script>
   <script src="js/lib/backbone.localStorage.js"></script>
+  <script src="js/lib/handlebars.js"></script>
   <script src="js/models/todo.js"></script>
   <script src="js/collections/todos.js"></script>
   <script src="js/views/todos.js"></script>
